--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
+    <script src="functions.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZHYymzYflI1c7mbhFTcsb6NN4ss7LBwU&callback=initMap" type="text/javascript"></script>
+
+
     <title>Find your Fakbar</title>
 </head>
 <body>
+
+    <h3>Map of Leuven</h3>
+    <div id="map">
+    </div>
 
 </body>
 </html>
