--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -9,10 +9,21 @@
     <script src="functions.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZHYymzYflI1c7mbhFTcsb6NN4ss7LBwU&callback=initMap" type="text/javascript"></script>
 
-
     <title>Find your Fakbar</title>
 </head>
 <body>
+
+<div id="nav">
+
+    <ul>
+        <li><img id="logo" src="logo.png"></li>
+        <li> <a href="#about"> About </a></li>
+        <li> <a href="#fakbar">Fakbar </a></li>
+        <li> <a href="#cursusdienst"> Cursusdienst </a></li>
+        <li> <a href="#leuven"> Leuven </a></li>
+    </ul>
+    <br>
+</div>
 
     <h3>Map of Leuven</h3>
     <div id="map">
