--- a/about.html
+++ b/about.html
@@ -24,3 +24,9 @@
     </ul>
     <br>
 </div>
+
+<div id="Students">
+    <h1>Who are we?</h1>
+    <h1>Why are we doing this?</h1>
+    <h1>What are <em>Digital Humanities<em>?</h1>
+</div>
