new link to cudi and fakbar

--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -17,10 +17,14 @@
 
     <ul>
         <li><img id="logo" src="logo.png"></li>
-        <li> <a href="#about"> About </a></li>
-        <li> <a href="#fakbar">Fakbar </a></li>
-        <li> <a href="#cursusdienst"> Cursusdienst </a></li>
-        <li> <a href="#leuven"> Leuven </a></li>
+        <li> <a href="about.html"> About </a></li>
+        <li> <a href="fakbar.html">Fakbar </a></li>
+        <li> <a href="cursusdienst.html"> Cursusdienst </a></li>
+        <li> <a href="leuven.html"> Leuven </a></li>
     </ul>
     <br>
+</div>
+
+<div>
+    Hello here is info about the cudi
 </div>
