first text for cudi and fakbar

--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -25,6 +25,7 @@
     <br>
 </div>
 
-<div>
-    Hello here is info about the cudi
+<div id = "Cudi 101">
+    <h1>What is a cursusdienst?</h1>
+    <p>A cursusdienst is a course serivce organized by student associations in Leuven.</p>
 </div>
