--- a/fakbar.html
+++ b/fakbar.html
@@ -17,14 +17,14 @@
 
     <ul>
         <li><img id="logo" src="logo.png"></li>
-        <li> <a href="#about"> About </a></li>
-        <li> <a href="#fakbar">Fakbar </a></li>
-        <li> <a href="#cursusdienst"> Cursusdienst </a></li>
-        <li> <a href="#leuven"> Leuven </a></li>
+        <li> <a href="about.html"> About </a></li>
+        <li> <a href="fakbar.html">Fakbar </a></li>
+        <li> <a href="cursusdienst.html"> Cursusdienst </a></li>
+        <li> <a href="leuven.html"> Leuven </a></li>
     </ul>
     <br>
 </div>
 
-<div>
-    Info about a fakbar
+<div id = "Fakbar101">
+    <h1>What is a fakbar?</h1>
 </div>
