--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -16,7 +16,7 @@
 <div id="nav">
 
     <ul>
-        <li><img id="logo" src="logo.png"></li>
+        <li><a href="Find_Fakbar.html"><img id="logo" src="logo.png"></a></li>
         <li> <a href="about.html"> About </a></li>
         <li> <a href="fakbar.html">Fakbar </a></li>
         <li> <a href="cursusdienst.html"> Cursusdienst </a></li>
@@ -25,7 +25,7 @@
     <br>
 </div>
 
-<div id = "Cudi 101">
+<div id = "Cudi101">
     <h1>What is a cursusdienst?</h1>
-    <p>A cursusdienst is a course serivce organized by student associations in Leuven.</p>
+    <p>A cursusdienst is a course serivce organized by student associations</p>
 </div>
