Basic content about us

--- a/about.html
+++ b/about.html
@@ -27,6 +27,9 @@
 
 <div id="Students">
     <h1>Who are we?</h1>
+    <p>
+        We are <a href="https://www.linkedin.com/in/anaschultze/">Ana Schultze</a> and <a href="https://www.linkedin.com/in/jelkejoosen/">Jelke Joosen</a>, Students of the Advanced Master's Programme <a href="https://set.kuleuven.be/mdh/"><em>Digital Humanities</em></a> at KU Leuven.
+    </p>
     <h1>Why are we doing this?</h1>
     <h1>What are <em>Digital Humanities<em>?</h1>
 </div>
