--- a/about.html
+++ b/about.html
@@ -30,6 +30,18 @@
     <p>
         We are <a href="https://www.linkedin.com/in/anaschultze/">Ana Schultze</a> and <a href="https://www.linkedin.com/in/jelkejoosen/">Jelke Joosen</a>, Students of the Advanced Master's Programme <a href="https://set.kuleuven.be/mdh/"><em>Digital Humanities</em></a> at KU Leuven.
     </p>
+        <h2>
+            Ana Schultze
+        </h2>
+        <p>
+            Ana Schultze has a background in Art History [aanvullen door Ana zelf :)] which she obtained from the KU Leuven. She is also pretty awesome.
+        </p>
+        <h2>
+            Jelke Joosen
+        </h2>
+        <p>
+            Jelke Joosen has a Bachelor's Degree in English and Dutch Linguistics and Literature. She obtained this degree from the University of Antwerp, where she also completed a Master of Linguistics, specification <em>Computational Psycholinguistics</em>.
+        </p>
     <h1>Why are we doing this?</h1>
     <h1>What are <em>Digital Humanities<em>?</h1>
 </div>
