--- a/fakbar.html
+++ b/fakbar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>s
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,4 +27,5 @@
 
 <div id = "Fakbar101">
     <h1>What is a fakbar?</h1>
+    <p>A fakbar is a faculty cafe.</p>
 </div>
