--- a/about.html
+++ b/about.html
@@ -31,17 +31,20 @@
         We are <a href="https://www.linkedin.com/in/anaschultze/">Ana Schultze</a> and <a href="https://www.linkedin.com/in/jelkejoosen/">Jelke Joosen</a>, Students of the Advanced Master's Programme <a href="https://set.kuleuven.be/mdh/"><em>Digital Humanities</em></a> at KU Leuven.
     </p>
         <h2>
-            Ana Schultze
+            <ul><li>Ana Schultze</li></ul>
         </h2>
         <p>
-            Ana Schultze has a background in Art History [aanvullen door Ana zelf :)] which she obtained from the KU Leuven. She is also pretty awesome.
+            Ana Schultze obtained her Master's degree in Art History at KU Leuven, specializing in tapestry and Digital Art History. She works in the library as a student employee and is passionate about analog photography, playing the harp and volunteering in the cultural sector. She also has a background in student representation as member of Mecenas (the association for art history students) and as Culture Coordinator at LOKO.
+
         </p>
         <h2>
-            Jelke Joosen
+            <ul><li>Jelke Joosen</li></ul>
         </h2>
         <p>
-            Jelke Joosen has a Bachelor's Degree in English and Dutch Linguistics and Literature. She obtained this degree from the University of Antwerp, where she also completed a Master of Linguistics, specification <em>Computational Psycholinguistics</em>.
+            Jelke Joosen has a Bachelor's Degree in English and Dutch Linguistics and Literature. She obtained this degree from the University of Antwerp, where she also completed a Master of Linguistics, specification <em>Computational Psycholinguistics</em>. In her free time she plays the saxophone and the trombone, and volunteers at childrens' vacation camps as a governmentally certified monitor.
         </p>
+</div>
+<div id="why">
     <h1>Why are we doing this?</h1>
     <p>
         Within the Programme of Digital Humanities, the optional course <em>Web Information Systems</em> is offered. The course has the following* aims: <br>
@@ -52,7 +55,9 @@
             <li>be able to evaluate and identify relevant tools for the design and implementation of a non-trivial dynamic web application; and </li>
             <li>be able to effectively use these tools in the implementation of the application.</li>
         </ol>
-        The students will be required to carry out practical and theoretical assignments for which they will have to use representatives of one or more of the technologies discussed in the lectures. <br> <br> *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736"><em>course page</a>.
+        The students will be required to carry out practical and theoretical assignments for which they will have to use representatives of one or more of the technologies discussed in the lectures. <br> <br> *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736"><em>course page</em></a>.
     </p>
+</div>
     <h1>What are <em>Digital Humanities<em>?</h1>
+<div id ="DH">
 </div>
