a href em combo

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
             <li>be able to evaluate and identify relevant tools for the design and implementation of a non-trivial dynamic web application; and </li>
             <li>be able to effectively use these tools in the implementation of the application.</li>
         </ol>
-        The students will be required to carry out practical and theoretical assignments for which they will have to use representatives of one or more of the technologies discussed in the lectures. <br> <br> *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736"><em>course page</em></a>.
+        The students will be required to carry out practical and theoretical assignments for which they will have to use representatives of one or more of the technologies discussed in the lectures. <br> <br> *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736">course page</a>.
     </p>
 </div>
     <h1>What are <em>Digital Humanities<em>?</h1>
