--- a/about.html
+++ b/about.html
@@ -49,13 +49,16 @@
     <p>
         Within the Programme of Digital Humanities, the optional course <em>Web Information Systems</em> is offered. The course has the following* aims: <br>
         The course proposes to provide the student with knowledge of and insight into the rapidly evolving field of web technology by means of an overview of a number of relevant topics. At the end of this course, students will:
+    </p>
         <ol>
             <li>be able to describe and explain the design of the basic infrastructure of the web;</li>
             <li>be able to describe and explain the design of basic components of the W3C semantic web stack; </li>
             <li>be able to evaluate and identify relevant tools for the design and implementation of a non-trivial dynamic web application; and </li>
             <li>be able to effectively use these tools in the implementation of the application.</li>
         </ol>
-        The students will be required to carry out practical and theoretical assignments for which they will have to use representatives of one or more of the technologies discussed in the lectures. <br> <br> *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736">course page</a>.
+    <p>
+        The students will be required to carry out practical and theoretical assignments for which they will have to use representatives of one or more of the technologies discussed in the lectures. <br> <br> 
+        *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736">course page</a>.
     </p>
 </div>
     <h1>What are <em>Digital Humanities<em>?</h1>
