Links in new tab

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <div id="Students">
     <h1>Who are we?</h1>
     <p>
-        We are <a href="https://www.linkedin.com/in/anaschultze/">Ana Schultze</a> and <a href="https://www.linkedin.com/in/jelkejoosen/">Jelke Joosen</a>, Students of the Advanced Master's Programme <a href="https://set.kuleuven.be/mdh/"><em>Digital Humanities</em></a> at KU Leuven.
+        We are <a href="https://www.linkedin.com/in/anaschultze/">Ana Schultze</a> and <a href="https://www.linkedin.com/in/jelkejoosen/" target="_blank">Jelke Joosen</a>, Students of the Advanced Master's Programme <a href="https://set.kuleuven.be/mdh/" target="_blank"><em>Digital Humanities</em></a> at KU Leuven.
     </p>
         <h2>
             <ul><li>Ana Schultze</li></ul>
@@ -57,7 +57,7 @@
         </ol>
     <p>
         The students will be required to carry out practical and theoretical assignments for which they will have to use representatives of one or more of the technologies discussed in the lectures. <br> <br> 
-        *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736">course page</a>.
+        *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736" target="_blank">course page</a>.
     </p>
 </div>
     <h1>What are <em>Digital Humanities<em>?</h1>
