Ana linked new tab

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <div id="Students">
     <h1>Who are we?</h1>
     <p>
-        We are <a href="https://www.linkedin.com/in/anaschultze/">Ana Schultze</a> and <a href="https://www.linkedin.com/in/jelkejoosen/" target="_blank">Jelke Joosen</a>, Students of the Advanced Master's Programme <a href="https://set.kuleuven.be/mdh/" target="_blank"><em>Digital Humanities</em></a> at KU Leuven.
+        We are <a href="https://www.linkedin.com/in/anaschultze/" target="_blank">Ana Schultze</a> and <a href="https://www.linkedin.com/in/jelkejoosen/" target="_blank">Jelke Joosen</a>, Students of the Advanced Master's Programme <a href="https://set.kuleuven.be/mdh/" target="_blank"><em>Digital Humanities</em></a> at KU Leuven.
     </p>
         <h2>
             <ul><li>Ana Schultze</li></ul>
