--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -23,7 +23,7 @@
     <br>
 </div>
 
-<div id = "Cudi101">
+<div id = "Cudi">
     <h1>What is a cursusdienst?</h1>
     <p>A cursusdienst is a course serivce organized by student associations</p>
 </div>
