--- a/fakbar.html
+++ b/fakbar.html
@@ -24,13 +24,14 @@
 
 <div id = "Fakbar101">
     <h1>What is a fakbar?</h1>
-    <p>A fakbar is a cafe that is run by members from student associations. According to the <a href="http://www.vlaamswoordenboek.be/definities/term/fakbar">Femish Online Dictionay</a>, it is a student café of a certain faculty, where the beer (pintjes) is usually cheap.</p>
+    <p>A fakbar is a bar that is run by members from student associations. According to the <a href="http://www.vlaamswoordenboek.be/definities/term/fakbar" target="_blank">Femish Online Dictionay</a>, it is a student cafe of a certain faculty, where the beer is usually cheap.</p>
     <p>The fakbar functions as a meeting place for people who want to get to know fellows students from their degree. Since the fakbars are managed and opened by student volunteers, the prices for consumptions can be kept as democratic as possible. This makes fakbars popular spots in Leuven.</p>
-    <p>The history of fakbars in Leuven goes back many years. Fakbars play important role in the city's nightlife industry and have become an essential part of university life. The word "fakbar" is derived from the Flemish "faculteitsbar" (which used to be written with a k), literally meaning "faculty cafe".</p>
-    <p>
-        <ul>Some useful tips:
-            <li>Don't forget your student card during your night out! At busy times, you often have to prove your registration at university before entering the cafe.</li>
-            <li>You can quickly order a beer by pointing your pinky finger in the air.</li>
-        </ul>
-    <p>
+    <p>The history of fakbars in Leuven goes back many years. Fakbars play important role in the city's nightlife industry and have become an essential part of university life. The word "fakbar" is derived from the Flemish "faculteitsbar" (which used to be written with a k), literally meaning "faculty bar".</p>
+
+<h1>Some useful tips:</h1>
+<ul>
+    <li>Don't forget your student card during your night out! At busy times, you often have to prove your registration at university before entering the bar.</li>
+    <li>You can quickly order a beer by pointing your pinky finger in the air.</li>
+</ul>
+
 </div>
