--- a/about.html
+++ b/about.html
@@ -65,6 +65,9 @@
         The students will be required to carry out practical and theoretical assignments for which they will have to use representatives of one or more of the technologies discussed in the lectures. <br> <br> 
         *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736" target="_blank">course page</a>.
     </p>
+    <p>
+        When discussing possible projects for the course described above, we tought it would be fun and practical to make a web application that could help students who are new to the KU Leuven find their way around the city, highlighting certain <em> points of interest </em> for them.
+    </p>
 </div>
     <h1>What are <em>Digital Humanities<em>?</h1>
 <div id ="DH">
