--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         *Description taken from the <a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/G0Y11AE.htm#activetab=doelstellingen_idp1354736" target="_blank">course page</a>.
     </p>
     <p>
-        When discussing possible projects for the course described above, we tought it would be fun and practical to make a web application that could help students who are new to the KU Leuven find their way around the city, highlighting certain <em> points of interest </em> for them.
+        When discussing possible projects for the course described above, we tought it would be fun and practical to make a web application that could help students who are new to the KU Leuven find their way around the city, highlighting certain <em> points of interest </em> for them. Though a similar page already existed, it was not particularly dynamic, and also terribly outdated.
     </p>
 </div>
     <h1>What are <em>Digital Humanities<em>?</h1>
