all dropdown menus added

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -25,6 +25,62 @@
     <br>
 </div>
 
+<h3>Select your Group</h3>
+<div id="groups">
+<select>
+    <option value="humanities">Humanities and Social Sciences</option>
+    <option value="science">Science, Engineering and Technology</option>
+    <option value="biomedical">Biomedical Sciences</option>
+</select>
+</div>
+
+<h3>Select your Faculty</h3>
+<div id="faculties_humanities">
+<select>
+    <option value="theology">Faculty of Theology and Religious Studies</option>
+    <option value="canon">Faculty of Canon Law</option>
+    <option value="philosophy">Institute of Philosophy</option>
+    <option value="law">Faculty of Law</option>
+    <option value="economics">Faculty of Economics and Business</option>
+    <option value="social">Faculty of Social Sciences</option>
+    <option value="arts">Faculty of Arts</option>
+    <option value="psychology">Faculty of Psychology and Educational Sciences</option>
+</select>
+</div>
+
+<h3>Select your Faculty</h3>
+<div id="faculties_science">
+<select>
+    <option value="architecture">Faculty of Architecture</option>
+    <option value="science">Faculty of Science</option>
+    <option value="engineering">Faculty of Engineering Science</option>
+    <option value="bioscience">Faculty of Bioscience Engineering</option>
+    <option value="engineering">Faculty of Engineering Technology</option>
+</select>
+</div>
+
+<h3>Select your Faculty</h3>
+<div id="faculty_biomedical">
+<select>
+    <option value="medicine">Faculty of Medicine</option>
+    <option value="pharma">Faculty of Pharmaceutical Sciences</option>
+    <option value="kine">Faculty of Kinesiology and Rehabilitation Sciences</option>
+</select>
+</div>
+
+<h3>Select your Degree</h3>
+<div id="degrees_arts">
+<select>
+    <option value="archeology">Bachelor in archeology</option>
+    <option value="history">Bachelor in history</option>
+    <option value="arthistory">Bachelor in art history</option>
+    <option value="musicology">Bachelor in musicology</option>
+    <option value="literature">Bachelor in literature and linguistics</option>
+    <option value="region">Bachelor in language and region studies</option>
+
+</select>
+</div>
+
     <h3>Map of Leuven</h3>
     <div id="map">
     </div>
