Layout about + what is DH

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     </ul>
     <br>
 </div>
-
+<div id="info">
 <div id="intro">
     <h1>Who are we?</h1>
     <p>
@@ -69,6 +69,10 @@
         When discussing possible projects for the course described above, we tought it would be fun and practical to make a web application that could help students who are new to the KU Leuven find their way around the city, highlighting certain <em> points of interest </em> for them. Though a similar page already existed, it was not particularly dynamic, and also terribly outdated.
     </p>
 </div>
-    <h1>What are <em>Digital Humanities<em>?</h1>
 <div id ="DH">
+    <h1>What are <em>Digital Humanities</em>?</h1>
+    <p>
+        The question of defining Digital Humanities has been an age old problem (not really <em>age</em> old, but you get the jist). Our attempt at defining it would be <em>the application, construction, and usage of digitial tools - of various kinds - to enhance humanities research and studies</em>. Ultimately, there might be as many definitions of the field as there are digital humanists around.
+    </p>
+</div>
 </div>
