fakbar slideshow tryout in jquery

--- a/fakbar.html
+++ b/fakbar.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="http://malsup.github.io/jquery.cycle.all.js"></script>
 
     <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
     <title>Find your Fakbar</title>
@@ -34,5 +35,10 @@
         <li>Don't forget your student card during your night out! At busy times, you often have to prove your registration at university before entering the bar.</li>
         <li>You can quickly order a beer by pointing your pinky finger in the air.</li>
     </ul>
+</div>
 
+<div class="pics">
+    <img src="images/fakbar1.jpg"/>
+    <img src="images/fakbar2.jpg"/>
+    <img src="images/fakbar3.jpg"/>
 </div>
