--- a/fakbar.html
+++ b/fakbar.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="http://malsup.github.io/jquery.cycle.all.js"></script>
-
-    <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
+    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
     <title>Find your Fakbar</title>
+
 </head>
 <body>
 
@@ -23,11 +21,23 @@
     <br>
 </div>
 
+<!--<div id="pics">
+    <img src="images/fakbar1.jpg"/>
+    <img src="images/fakbar2.jpg"/>
+    <img src="images/fakbar3.jpg"/>
+</div>-->
+
+<!-- this is for the images -->
+
+
+<!-- this is where the text goes -->
+<div id="info">
 <div id = "Fakbar">
     <h1>What is a fakbar?</h1>
     <p>A fakbar is a bar that is run by members from student associations. According to the <a href="http://www.vlaamswoordenboek.be/definities/term/fakbar" target="_blank">Femish Online Dictionay</a>, it is a student cafe of a certain faculty, where the beer is usually cheap.</p>
     <p>The fakbar functions as a meeting place for people who want to get to know fellows students from their degree. Since the fakbars are managed and opened by student volunteers, the prices for consumptions can be kept as democratic as possible. This makes fakbars popular spots in Leuven.</p>
     <p>The history of fakbars in Leuven goes back many years. Fakbars play important role in the city's nightlife industry and have become an essential part of university life. The word "fakbar" is derived from the Flemish "faculteitsbar" (which used to be written with a k), literally meaning "faculty bar".</p>
+    <p>Find your fakbar <a href="Find_Fakbar.html">here!</a></p>
 
     <h1>Some useful tips:</h1>
 
@@ -36,9 +46,4 @@
         <li>You can quickly order a beer by pointing your pinky finger in the air.</li>
     </ul>
 </div>
-
-<div class="pics">
-    <img src="images/fakbar1.jpg"/>
-    <img src="images/fakbar2.jpg"/>
-    <img src="images/fakbar3.jpg"/>
 </div>
