Fakbar slideshow working (JQuery)

--- a/fakbar.html
+++ b/fakbar.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script src = "https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src = "functions.js"></script>
+    <script src="http://malsup.github.io/jquery.cycle.all.js"></script>
     <title>Find your Fakbar</title>
 
 </head>
@@ -29,6 +31,16 @@
 
 <!-- this is for the images -->
 
+<div class="pics">
+    <img src="images/fakbar1.jpg"/>
+    <img src="images/fakbar2.jpg"/>
+    <img src="images/fakbar3.jpg"/>
+</div>
+
+<div class="container">
+    <h2></h2>
+    <p></p>
+</div>
 
 <!-- this is where the text goes -->
 <div id="info">
