footer added, fix doesn't work yet

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -7,7 +7,7 @@
     <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
     <script src="functions.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZHYymzYflI1c7mbhFTcsb6NN4ss7LBwU&callback=initMap" type="text/javascript"></script>
-
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>Find your Fakbar</title>
 </head>
 <body>
@@ -85,4 +85,12 @@
     </div>
 
 </body>
+
+<div class="footer">
+ <p>All images © Ana Schultze and Jelke Joosen</p>
+ <p>Follow us on GitHub:
+ <a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a>
+ <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
+</div>
+
 </html>
