--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
 
@@ -73,4 +74,11 @@
         The question of defining Digital Humanities has been an age old problem (not really <em>age</em> old, but you get the jist). Our attempt at defining it would be <em>the application, construction, and usage of digitial tools - of various kinds - to enhance humanities research and studies</em>. Ultimately, there might be as many definitions of the field as there are digital humanists around.
     </p>
 </div>
+</div>
+
+<div class="footer">
+ <p>All images © Ana Schultze and Jelke Joosen</p>
+ <p>Follow us on GitHub:
+ <a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a>
+ <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
 </div>
