--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     <title>Find your Fakbar</title>
 </head>
@@ -32,4 +33,11 @@
     <p>Don't forget to bring your student card and member card, in order to take advantage of the members discount. Sometimes, course material has to be reserved online. On the cursusdienst website from you program, you can log in with your KU Leuven account. After reservations, your pickup location and date will be communicated via an automatic email. Always check the opening hours before heading to the cursusdienst. They are regularly changed during the semester.</p>
     <p>Find your course service <a href="Find_Fakbar.html">here!</a></p>
 </div>
+</div>
+
+<div class="footer">
+ <p>All images © Ana Schultze and Jelke Joosen</p>
+ <p>Follow us on GitHub:
+ <a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a>
+ <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
 </div>
