--- a/fakbar.html
+++ b/fakbar.html
@@ -6,6 +6,7 @@
     <script src = "https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src = "functions.js"></script>
     <script src="http://malsup.github.io/jquery.cycle.all.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>Find your Fakbar</title>
 
 </head>
@@ -50,10 +51,16 @@
 
 </div>
 
-
 <!-- this is for the images -->
 <div class="pics">
     <img src="images/fakbar1.jpg"/>
     <img src="images/fakbar2.jpg"/>
     <img src="images/fakbar3.jpg"/>
+</div>
+
+<div class="footer">
+ <p>All images © Ana Schultze and Jelke Joosen</p>
+ <p>Follow us on GitHub:
+ <a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a>
+ <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
 </div>
