--- a/leuven.html
+++ b/leuven.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
 
@@ -38,4 +39,11 @@
         <li>Don't forget your student card during your night out! At busy times, you often have to prove your registration at university before entering the bar.</li>
         <li>You can quickly order a beer by pointing your pinky finger in the air.</li>
     </ul>
+</div>
+
+<div class="footer">
+ <p>All images © Ana Schultze and Jelke Joosen</p>
+ <p>Follow us on GitHub:
+ <a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a>
+ <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
 </div>
