footer (fixed position) + about (closed body tag)

--- a/about.html
+++ b/about.html
@@ -82,3 +82,5 @@
  <a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a>
  <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
 </div>
+
+</body>
