--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
     <script src="functions.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZHYymzYflI1c7mbhFTcsb6NN4ss7LBwU&callback=initMap" type="text/javascript"></script>
@@ -13,13 +13,12 @@
 <body>
 
 <div id="nav">
-
     <ul>
         <li><a href="Find_Fakbar.html"><img id="logo" src="logo.png"></a></li>
-        <li> <a href="about.html"> About </a></li>
-        <li> <a href="fakbar.html">Fakbar </a></li>
-        <li> <a href="cursusdienst.html"> Cursusdienst </a></li>
-        <li> <a href="leuven.html"> Leuven </a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="fakbar.html">FAKBAR</a></li>
+        <li><a href="cursusdienst.html">CURSUSDIENST</a></li>
+        <li><a href="leuven.html">LEUVEN</a></li>
     </ul>
     <br>
 </div>
@@ -86,11 +85,9 @@
 
 </body>
 
-<div class="footer">
- <p>All images © Ana Schultze and Jelke Joosen</p>
- <p>Follow us on GitHub:
- <a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a>
- <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
-</div>
+<footer>
+ <p class="copyright">Copyright © Ana Schultze and Jelke Joosen</p>
+ <p class="github"><a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a> <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
+</footer>
 
 </html>
