--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -12,17 +13,17 @@
 </head>
 <body>
 
-<div id="nav">
+    <div id="nav">
 
-    <ul>
-        <li><a href="Find_Fakbar.html"><img id="logo" src="logo.png"></a></li>
-        <li> <a href="about.html"> About </a></li>
-        <li> <a href="fakbar.html">Fakbar </a></li>
-        <li> <a href="cursusdienst.html"> Cursusdienst </a></li>
-        <li> <a href="leuven.html"> Leuven </a></li>
-    </ul>
-    <br>
-</div>
+        <ul>
+            <li><a href="Find_Fakbar.html"><img id="logo" src="logo.png"></a></li>
+            <li> <a href="about.html"> ABOUT </a></li>
+            <li> <a href="fakbar.html"> FAKBAR </a></li>
+            <li> <a href="cursusdienst.html"> CURSUSDIENST </a></li>
+            <li> <a href="leuven.html"> LEUVEN </a></li>
+        </ul>
+        <br>
+    </div>
 
 <div id="info">
 
@@ -35,9 +36,9 @@
 </div>
 </div>
 
-<div class="footer">
- <p>All images © Ana Schultze and Jelke Joosen</p>
- <p>Follow us on GitHub:
- <a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a>
- <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
-</div>
+<footer>
+ <p class="copyright">Copyright © Ana Schultze and Jelke Joosen</p>
+ <p class="github"><a class="github-button" href="https://github.com/anaschultze" aria-label="Follow @anaschultze on GitHub">@anaschultze</a> <a class="github-button" href="https://github.com/jelkejl" aria-label="Follow @jelkejl on GitHub">@JelkeJL</a></p>
+</footer>
+
+</body>
