new cudi images

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -28,6 +28,7 @@
 <h3>Select your Group</h3>
 <div id="groups">
 <select>
+    <option value="empty"> </option>
     <option value="humanities">Humanities and Social Sciences</option>
     <option value="science">Science, Engineering and Technology</option>
     <option value="biomedical">Biomedical Sciences</option>
@@ -37,6 +38,7 @@
 <h3>Select your Faculty</h3>
 <div id="faculties_humanities">
 <select>
+    <option value="empty"> </option>
     <option value="theology">Faculty of Theology and Religious Studies</option>
     <option value="canon">Faculty of Canon Law</option>
     <option value="philosophy">Institute of Philosophy</option>
@@ -51,6 +53,7 @@
 <h3>Select your Faculty</h3>
 <div id="faculties_science">
 <select>
+    <option value="empty"> </option>
     <option value="architecture">Faculty of Architecture</option>
     <option value="science">Faculty of Science</option>
     <option value="engineering">Faculty of Engineering Science</option>
@@ -62,6 +65,7 @@
 <h3>Select your Faculty</h3>
 <div id="faculty_biomedical">
 <select>
+    <option value="empty"> </option>
     <option value="medicine">Faculty of Medicine</option>
     <option value="pharma">Faculty of Pharmaceutical Sciences</option>
     <option value="kine">Faculty of Kinesiology and Rehabilitation Sciences</option>
@@ -71,6 +75,7 @@
 <h3>Select your Degree</h3>
 <div id="degrees_arts">
 <select>
+    <option value="empty"> </option>
     <option value="archeology">Bachelor in archeology</option>
     <option value="history">Bachelor in history</option>
     <option value="arthistory">Bachelor in art history</option>
