--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -37,9 +37,9 @@
 </div>
 
 <div class="pics">
-    <img src="images/fakbar1.jpg"/>
-    <img src="images/fakbar2.jpg"/>
-    <img src="images/fakbar3.jpg"/>
+    <img src="images/cudi1.jpg"/>
+    <img src="images/cudi2.jpg"/>
+    <img src="images/cudi3.jpg"/>
 </div>
 
 <footer>
