--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -23,10 +23,9 @@
         <br>
     </div>
 
-
-
-<h3>Select your Group</h3>
+<div id="info">
 <div id="groups">
+<h3>Select your Group</h3>
 <select>
     <option value="empty"> </option>
     <option value="humanities">Humanities and Social Sciences</option>
@@ -35,8 +34,8 @@
 </select>
 </div>
 
-<h3>Select your Faculty</h3>
 <div id="faculties_humanities">
+<h3>Select your Faculty</h3>
 <select>
     <option value="empty"> </option>
     <option value="theology">Faculty of Theology and Religious Studies</option>
@@ -50,8 +49,8 @@
 </select>
 </div>
 
-<h3>Select your Faculty</h3>
 <div id="faculties_science">
+<h3>Select your Faculty</h3>
 <select>
     <option value="empty"> </option>
     <option value="architecture">Faculty of Architecture</option>
@@ -62,8 +61,8 @@
 </select>
 </div>
 
-<h3>Select your Faculty</h3>
 <div id="faculty_biomedical">
+<h3>Select your Faculty</h3>
 <select>
     <option value="empty"> </option>
     <option value="medicine">Faculty of Medicine</option>
@@ -72,8 +71,8 @@
 </select>
 </div>
 
-<h3>Select your Degree</h3>
 <div id="degrees_arts">
+<h3>Select your Degree</h3>
 <select>
     <option value="empty"> </option>
     <option value="archeology">Bachelor in archeology</option>
@@ -85,8 +84,7 @@
 
 </select>
 </div>
-
-    <h3>Map of Leuven</h3>
+</div>
     <div id="map">
     </div>
 
