leuven page beginning

--- a/leuven.html
+++ b/leuven.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <script src = "https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src = "functions.js"></script>
+    <script src="http://malsup.github.io/jquery.cycle.all.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-
-    <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
-
-
     <title>Find your Fakbar</title>
 </head>
+
 <body>
 
     <div id="nav">
@@ -25,7 +26,11 @@
         <br>
     </div>
 
-
+<div id="info">
+    <div id="aboutleuven">
+    <p>hello world</p>
+</div>
+</div>
 
 <footer>
  <p class="copyright">Copyright © Ana Schultze and Jelke Joosen</p>
