content block working on leuven page

--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -25,22 +25,23 @@
         <br>
     </div>
 
-<div id = "info">
-
+<div id="info">
 <div id = "Cudi1">
     <h1>What is a cursusdienst?</h1>
     <p>Apart from providing entertainment, student associations from each faculty or program aim to help you study. Most of them offer a cursusdienst (course service), where they sell course material as cheap as possible. Sometimes, member cards, gadgets and event tickets are available as well. There might even be a platform for selling and buying second hand books.</p>
 </div>
+
+<div class="floating-box">Floating box 1</div>
+<div class="floating-box">Floating box 2</div>
 
 <div id = "Cudi2">
     <h1>How does it work?</h1>
     <p>Don't forget to bring your student card and member card, in order to take advantage of the members discount. Sometimes, course material has to be reserved online. On the cursusdienst website from you program, you can log in with your KU Leuven account. After reservations, your pickup location and date will be communicated via an automatic email. Always check the opening hours before heading to the cursusdienst. They are regularly changed during the semester.</p>
     <p>Find your course service <a href="Find_Fakbar.html">here!</a></p>
 </div>
-
 </div>
 
-<div class="pics">
+<div class="cudipics">
     <img src="images/cudi1.jpg"/>
     <img src="images/cudi2.jpg"/>
     <img src="images/cudi3.jpg"/>
