Optimize selection menus
art degrees not yet added

--- a/Find_Fakbar.html
+++ b/Find_Fakbar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <!--<script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>-->
+    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="functions.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZHYymzYflI1c7mbhFTcsb6NN4ss7LBwU&callback=initMap" type="text/javascript"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -26,8 +26,8 @@
 <div id="info">
 <div id="groups">
 <h3>Select your Group</h3>
-<select>
-    <option value="empty"> </option>
+<select class ="default" id="group" name="group">
+    <option value="empty" selected="selected"> </option>
     <option value="humanities">Humanities and Social Sciences</option>
     <option value="science">Science, Engineering and Technology</option>
     <option value="biomedical">Biomedical Sciences</option>
@@ -36,7 +36,7 @@
 
 <div id="faculties_humanities">
 <h3>Select your Faculty</h3>
-<select>
+<select class="default" id="fac_hum" name="fac_hum">
     <option value="empty"> </option>
     <option value="theology">Faculty of Theology and Religious Studies</option>
     <option value="canon">Faculty of Canon Law</option>
@@ -51,7 +51,7 @@
 
 <div id="faculties_science">
 <h3>Select your Faculty</h3>
-<select>
+<select class="default" id="fac_sci" name="fac_sci">
     <option value="empty"> </option>
     <option value="architecture">Faculty of Architecture</option>
     <option value="science">Faculty of Science</option>
@@ -63,7 +63,7 @@
 
 <div id="faculty_biomedical">
 <h3>Select your Faculty</h3>
-<select>
+<select class="default" id="fac_bio" name="fac_bio">
     <option value="empty"> </option>
     <option value="medicine">Faculty of Medicine</option>
     <option value="pharma">Faculty of Pharmaceutical Sciences</option>
