--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -10,7 +10,13 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>Find your Fakbar</title>
 
+
 </head>
+<script>
+$(document).ready(function() {
+$(".pics").cycle('fade');
+});
+</script>
 <body>
 
     <div id="nav">
