--- a/fakbar.html
+++ b/fakbar.html
@@ -11,6 +11,13 @@
     <title>Find your Fakbar</title>
 
 </head>
+
+<script>
+$(document).ready(function() {
+$(".pics").cycle('fade');
+});
+</script>
+
 <body>
 
     <div id="nav">
