--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -14,7 +14,7 @@
 </head>
 <script>
 $(document).ready(function() {
-$(".pics").cycle('fade');
+$(".cudipics").cycle('fade');
 });
 </script>
 <body>
