styling in block elements works now

--- a/leuven.html
+++ b/leuven.html
@@ -26,12 +26,6 @@
         <br>
     </div>
 
-<div id="info">
-    <div id="aboutleuven">
-    <p>hello world</p>
-</div>
-</div>
-
   <div id="wide"><h1>What is a cursusdienst?</h1>
   <p>Apart from providing entertainment, student associations from each faculty or program aim to help you study. Most of them offer a cursusdienst (course service), where they sell course material as cheap as possible. Sometimes, member cards, gadgets and event tickets are available as well. There might even be a platform for selling and buying second hand books.</p>
 </div>
@@ -41,6 +35,12 @@
 </div>
 
 <a href="Find_Fakbar.html" id="button_fakbar">Click here to find your course service!</a>
+
+<div class="cudipics">
+    <img src="images/cudi1.jpg"/>
+    <img src="images/cudi2.jpg"/>
+    <img src="images/cudi3.jpg"/>
+</div>
 
 <footer>
  <p class="copyright">Copyright © Ana Schultze and Jelke Joosen</p>
