--- a/leuven.html
+++ b/leuven.html
@@ -11,7 +11,11 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>Find your Fakbar</title>
 </head>
-
+<script>
+$(document).ready(function() {
+$(".cudipics").cycle('fade');
+});
+</script>
 <body>
 
     <div id="nav">
