--- a/leuven.html
+++ b/leuven.html
@@ -29,16 +29,18 @@ $(".cudipics").cycle('fade');
         </ul>
         <br>
     </div>
-
+  <div class="mid">
   <div id="wide"><h1>What is a cursusdienst?</h1>
-  <p>Apart from providing entertainment, student associations from each faculty or program aim to help you study. Most of them offer a cursusdienst (course service), where they sell course material as cheap as possible. Sometimes, member cards, gadgets and event tickets are available as well. There might even be a platform for selling and buying second hand books.</p>
+  <p>Student associations from each faculty or program aim to help you study, next to providing entertainment. Most of them offer a cursusdienst (course service), where they sell course material as cheap as possible. Sometimes, member cards, gadgets and event tickets are available as well. There might even be a platform for selling and buying second hand books.</p>
 </div>
 
   <div id="narrow"><h1>How does it work?</h1>
   <p>Don't forget to bring your student card and member card, in order to take advantage of the members discount. Sometimes, course material has to be reserved online. On the cursusdienst website from you program, you can log in with your KU Leuven account. After reservations, your pickup location and date will be communicated via an automatic email. Always check the opening hours before heading to the cursusdienst. They are regularly changed during the semester.</p>
 </div>
+</div>
 
 <a href="Find_Fakbar.html" id="button_fakbar">Click here to find your course service!</a>
+
 
 <div class="cudipics">
     <img src="images/cudi1.jpg"/>
