--- a/leuven.html
+++ b/leuven.html
@@ -39,8 +39,7 @@ $(".cudipics").cycle('fade');
 </div>
 </div>
 
-<a href="Find_Fakbar.html" id="button_fakbar">Click here to find your course service!</a>
-
+<a href="Find_Fakbar.html" id="button_fakbar">FIND YOUR COURSE SERVICE</a>
 
 <div class="cudipics">
     <img src="images/cudi1.jpg"/>
