fakbar styling done

--- a/cursusdienst.html
+++ b/cursusdienst.html
@@ -41,7 +41,7 @@ $(".cudipics").cycle('fade');
         </div>
     </div>
 
-    <a href="Find_Fakbar.html" id="button_fakbar">FIND YOUR COURSE SERVICE</a>
+    <a href="Find_Fakbar.html" id="button_cudi">FIND YOUR COURSE SERVICE</a>
 
     <div class="cudipics">
         <img src="images/cudi1.jpg"/>
