--- a/fakbar.html
+++ b/fakbar.html
@@ -32,23 +32,28 @@ $(".fakbarpics").cycle('fade');
         <br>
     </div>
 
-    <div class="mid">
-        <div id="wide"><h1>What is a fakbar?</h1>
+    <div class="fakbarpics">
+        <img src="images/fakbar1.jpg"/>
+        <img src="images/fakbar2.jpg"/>
+        <img src="images/fakbar3.jpg"/>
+    </div>
+
+    <div class="midfak">
+        <div id="widefak"><h1>What is a fakbar?</h1>
             <p>A fakbar is a bar that is run by members from student associations. According to the <a href="http://www.vlaamswoordenboek.be/definities/term/fakbar" target="_blank">Femish Online Dictionay</a>, it is a student cafe of a certain faculty, where the beer is usually cheap.</p>
             <p>The fakbar functions as a meeting place for people who want to get to know fellows students from their degree. Since the fakbars are managed and opened by student volunteers, the prices for consumptions can be kept as democratic as possible. This makes fakbars popular spots in Leuven.</p>
             <p>The history of fakbars in Leuven goes back many years. Fakbars play important role in the city's nightlife industry and have become an essential part of university life. The word "fakbar" is derived from the Flemish "faculteitsbar" (which used to be written with a k), literally meaning "faculty bar".</p>
         </div>
 
-        <div id="narrow"><h1>Some useful tips:</h1>
+        <div id="narrowfak"><h1>Some useful tips:</h1>
             <ul>
-                <li>Don't forget your student card during your night out! At busy times, you often have to prove your registration at university before entering the bar.</li>
+                <li>Don't forget your student card during your night out! At busy times, you often have to prove your university registration before entering the bar.</li>
                 <br>
                 <li>You can quickly order a beer by pointing your pinky finger in the air.</li>
             </ul>
+            <a href="Find_Fakbar.html" id="button_fakbar">FIND YOUR COURSE SERVICE</a>
         </div>
     </div>
-
-    <a href="Find_Fakbar.html" id="button_fakbar">FIND YOUR COURSE SERVICE</a>
 
 <!--
 <div id="info">
@@ -71,12 +76,6 @@ $(".fakbarpics").cycle('fade');
 
 </div>
 -->
-
-<div class="fakbarpics">
-    <img src="images/fakbar1.jpg"/>
-    <img src="images/fakbar2.jpg"/>
-    <img src="images/fakbar3.jpg"/>
-</div>
 
 <footer>
  <p class="copyright">Copyright © Ana Schultze and Jelke Joosen</p>
